# ProjectWild

./: .clang-format  .editorconfig  CMakeLists.txt  License.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  main.cpp
